[project]
name = "halftone-converter"
description = "An image converter to create high quality halftone images"
keywords = ["image processing", "halftone", "cmyk colors", "cairo"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}
maintainers = [
  {name = "curegit", email = "contact@curegit.jp"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "License :: Freeware",
]
dynamic = ["version"]
dependencies = [
  "numpy >= 1.24",
  "pillow >= 10.1",
  "pycairo >= 1.23",
  "rich >= 13.0",
]

[project.optional-dependencies]
dev = ["pip", "setuptools", "build", "twine"]

[project.scripts]
halftonecv = "halftonecv.main:main"

[project.urls]
homepage = "https://github.com/curegit/halftone-converter"
repository = "https://github.com/curegit/halftone-converter.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["halftonecv*"]

[tool.setuptools.dynamic]
version = {attr = "halftonecv.__version__"}
