[project]
name = "halftone-converter"
description = "An image converter to create high quality halftone images"
keywords = ["image processing", "halftone", "cmyk colors", "cairo"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}
maintainers = [
  {name = "curegit", email = "contact@curegit.jp"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "License :: OSI Approved :: GNU Affero General Public License v3",
]
dynamic = ["version"]
dependencies = [
  "numpy >= 1.24.0",
  "pillow >= 9.3.0",
  "pycairo >= 1.23.0",
  "rich >= 13.0.0",
]

[project.optional-dependencies]
dev = ["pip", "setuptools", "build", "twine"]

[project.scripts]
halftonecv = "halftonecv.cli:main"

[project.urls]
homepage = "https://github.com/curegit/halftone-converter"
repository = "https://github.com/curegit/halftone-converter.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["halftonecv*"]

[tool.setuptools.dynamic]
version = {attr = "halftonecv.__version__"}
