[project]
name = "halftone-converter"
description = "An image converter to create high quality halftone images"
keywords = ["image processing", "halftone", "cmyk colors", "cairo"]
requires-python = ">=3.9"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
maintainers = [
  {name = "curegit", email = "contact@curegit.jp"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dynamic = ["version"]
dependencies = [
  "numpy >= 1.24.0",
  "pillow >= 9.3.0",
  "pycairo >= 1.23.0",
  "rich >= 13.0.0",
]

[project.optional-dependencies]
dev = ["pip", "build", "twine"]

[project.scripts]
halftonecv = "halftonecv.cli:main"

[project.entry-points.pyinstaller40]
hook-dirs = "halftonecv:pyinstaller_hooks_dir"

[project.urls]
homepage = "https://github.com/curegit/halftone-converter"
repository = "https://github.com/curegit/halftone-converter.git"

[build-system]
requires = ["setuptools >= 78"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["halftonecv*"]

[tool.setuptools.dynamic]
version = {attr = "halftonecv.__version__"}
